--- a/website/My Account.html
+++ b/website/My Account.html
@@ -219,6 +219,48 @@
           </div>
         </form>
       </div>
+
+      <!-- Log Out -->
+      <div class="border p-3 mb-4">
+        <h5 class="accentColour whiteText p-2">LOG OUT</h5>
+        <form>
+
+          <div class="d-grid gap-2">
+            <button type="submit" class="btn btn-outline-success">LOG OUT</button>
+          </div>
+        </form>
+      </div>
+
+      <!-- Delete Account -->
+      <div class="border p-3 mb-4">
+        <h5 class="accentColour whiteText p-2">DELETE ACCOUNT</h5>
+        <form>
+
+          <div class="d-grid gap-2">
+            <button type="button" class="btn btn-outline-danger" data-bs-toggle="modal" data-bs-target="#exampleModal">DELETE ACCOUNT</button>
+          </div>
+        </form>
+      </div>
+
+      <!-- Modal -->
+      <div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+        <div class="modal-dialog">
+          <div class="modal-content">
+            <div class="modal-header">
+              <h1 class="modal-title fs-5" id="exampleModalLabel">Delete Account</h1>
+              <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+            </div>
+            <div class="modal-body">
+              Deleting your account is permanent, and cannot be undone. You will lose access to your events and purchased tickets.
+              Are you sure you want to delete this account?
+            </div>
+            <div class="modal-footer">
+              <button type="button" class="btn btn-light" data-bs-dismiss="modal">Cancel</button>
+              <button type="button" class="btn btn-danger">Delete</button>
+            </div>
+          </div>
+        </div>
+      </div>
     </div>
   </main>
 
