My Account.html

--- a/website/My Account.html
+++ b/website/My Account.html
@@ -251,8 +251,7 @@
               <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
             </div>
             <div class="modal-body">
-              Deleting your account is permanent, and cannot be undone. You will lose access to your events and purchased tickets.
-              Are you sure you want to delete this account?
+              Deleting your account is permanent, and cannot be undone. You will lose access to your events and purchased tickets. Are you sure you want to delete this account?
             </div>
             <div class="modal-footer">
               <button type="button" class="btn btn-light" data-bs-dismiss="modal">Cancel</button>
