--- a/website/Event Creation.html
+++ b/website/Event Creation.html
@@ -40,6 +40,9 @@
               <h2 class="nav-item">
                 <a class="nav-link" href="My Account.html">My Account</a>
               </h2>
+              <h2 class="nav-item">
+                <a class="btn btn-outline-light" href="Login Page.html">Login</a>
+              </h2>
           </ul>
         </div>
       </div>
