--- a/website/Login Page.html
+++ b/website/Login Page.html
@@ -5,12 +5,12 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>HitsOnDeck - Login</title>
-  <link rel="shortcut icon" href="static\img\HitsOnDeckLogo.png"/>
+  <link rel="shortcut icon" href="static/img/HitsOnDeckLogo.png"/>
 
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
 
-  <link rel="stylesheet" href="static\css\styling.css">
+  <link rel="stylesheet" href="static/css/styling.css">
 </head>
 
 <body>
@@ -18,7 +18,7 @@
     <!-- Navbar -->
     <nav class="navbar navbar-expand-lg sticky-top" data-bs-theme="dark">
       <div class="container">
-        <a class="navbar-brand" href="index.html"><img src="static\img\HitsOnDeckTransparent.png" alt="Logo" width="120"
+        <a class="navbar-brand" href="index.html"><img src="static/img/HitsOnDeckTransparent.png" alt="Logo" width="120"
             height="80" class="d-inline-block align-text-top">
         </a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
@@ -64,6 +64,9 @@
               <a href="forgot-password.html" class="text-decoration-none">Forgot Password?</a>
             </div>
           </form>
+          <div class="text-center mt-3">
+            <p>Don't have an account? <a href="Register Page.html" class="text-decoration-none">Register here</a></p>
+          </div>
         </div>
       </div>
     </div>
