--- a/website/My Account.html
+++ b/website/My Account.html
@@ -39,6 +39,9 @@
               <h2 class="nav-item">
                 <a class="nav-link active" href="My Account.html">My Account</a>
               </h2>
+              <h2 class="nav-item">
+                <a class="btn btn-outline-light" href="Login Page.html">Login</a>
+              </h2>
           </ul>
         </div>
       </div>
