--- a/website/Register Page.html
+++ b/website/Register Page.html
@@ -70,7 +70,7 @@
         </div>
       </form>
       <div class="text-center mt-3">
-        <p>Already have an account? <a href="login.html">Log in here</a></p>
+        <p>Already have an account? <a href="Login Page.html">Log in here</a></p>
       </div>
     </div>
   </main>
