Altered login flask functions to allow user to register or login and remember login credentials

--- a/website/Login Page.html
+++ b/website/Login Page.html
@@ -103,7 +103,7 @@
         </div>
         <div class="col">
           <h1>Terms & Services</h1>
-          <p>By using HitsOnDeck, you agree to our Terms & Services. We’re committed to providing a safe,
+          <p>By using HitsOnDeck, you agree to our Terms & Services. We're committed to providing a safe,
             secure, and enjoyable experience for all users. Please review our terms to learn more about
             your rights and responsibilities as a buyer or seller on our platform.
           </p>
