Added dates to comments

--- a/website/Event Details.html
+++ b/website/Event Details.html
@@ -289,9 +289,11 @@
           <!-- Existing comments will be appended here -->
           <li class="list-group-item">
             <strong>MileyLee:</strong> The last one was so good!
+            <a class="date">27 Sep 2024</a>
           </li>
           <li class="list-group-item">
             <strong>HeavyBass153:</strong> Looking forward to attending! I LOVE Flume!
+            <a class="date">23 Sep 2024</a>
           </li>
         </ul>
       </div>
