--- a/website/Register Page.html
+++ b/website/Register Page.html
@@ -54,7 +54,7 @@
           <input type="text" class="form-control" id="name" placeholder="Enter your full name" required>
         </div>
         <div class="mb-3">
-          <label for="email" class="form-label">Email address:</label>
+          <label for="email" class="form-label">Email Address:</label>
           <input type="email" class="form-control" id="email" placeholder="Enter your email" required>
         </div>
         <div class="mb-3">
@@ -64,6 +64,14 @@
         <div class="mb-3">
           <label for="confirmPassword" class="form-label">Confirm Password:</label>
           <input type="password" class="form-control" id="confirmPassword" placeholder="Confirm your password" required>
+        </div>
+        <div class="mb-3">
+          <label for="contact" class="form-label">Contact Number:</label>
+          <input type="contact" class="form-control" id="contact" placeholder="Enter your contact number" required>
+        </div>
+        <div class="mb-3">
+          <label for="street" class="form-label">Street Address:</label>
+          <input type="street" class="form-control" id="street" placeholder="Enter your street address" required>
         </div>
         <div class="d-flex justify-content-center">
           <button type="submit" class="btn btn-primary">Register</button>
